Bison/rpcalc.output
Nonterminals useless in grammar

   FNCT
   VAR


Terminals unused in grammar

   NEG
   POW


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | error '\n'

    6 exp: NUMBER
    7    | exp ADD exp
    8    | exp SUB exp
    9    | exp MUL exp
   10    | exp DIV exp


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5
error (256) 5
NUMBER (258) 6
SUB (259) 8
ADD (260) 7
MUL (261) 9
DIV (262) 10
NEG (263)
POW (264)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
input (12)
    on left: 1 2, on right: 0 2
line (13)
    on left: 3 4 5, on right: 2
exp (14)
    on left: 6 7 8 9 10, on right: 4 7 8 9 10


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    error   shift, and go to state 3
    NUMBER  shift, and go to state 4
    '\n'    shift, and go to state 5

    line  go to state 6
    exp   go to state 7


State 2

    0 $accept: input $end .

    $default  accept


State 3

    5 line: error . '\n'

    '\n'  shift, and go to state 8


State 4

    6 exp: NUMBER .

    $default  reduce using rule 6 (exp)


State 5

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    4 line: exp . '\n'
    7 exp: exp . ADD exp
    8    | exp . SUB exp
    9    | exp . MUL exp
   10    | exp . DIV exp

    SUB   shift, and go to state 9
    ADD   shift, and go to state 10
    MUL   shift, and go to state 11
    DIV   shift, and go to state 12
    '\n'  shift, and go to state 13


State 8

    5 line: error '\n' .

    $default  reduce using rule 5 (line)


State 9

    8 exp: exp SUB . exp

    NUMBER  shift, and go to state 4

    exp  go to state 14


State 10

    7 exp: exp ADD . exp

    NUMBER  shift, and go to state 4

    exp  go to state 15


State 11

    9 exp: exp MUL . exp

    NUMBER  shift, and go to state 4

    exp  go to state 16


State 12

   10 exp: exp DIV . exp

    NUMBER  shift, and go to state 4

    exp  go to state 17


State 13

    4 line: exp '\n' .

    $default  reduce using rule 4 (line)


State 14

    7 exp: exp . ADD exp
    8    | exp . SUB exp
    8    | exp SUB exp .
    9    | exp . MUL exp
   10    | exp . DIV exp

    MUL  shift, and go to state 11
    DIV  shift, and go to state 12

    $default  reduce using rule 8 (exp)


State 15

    7 exp: exp . ADD exp
    7    | exp ADD exp .
    8    | exp . SUB exp
    9    | exp . MUL exp
   10    | exp . DIV exp

    MUL  shift, and go to state 11
    DIV  shift, and go to state 12

    $default  reduce using rule 7 (exp)


State 16

    7 exp: exp . ADD exp
    8    | exp . SUB exp
    9    | exp . MUL exp
    9    | exp MUL exp .
   10    | exp . DIV exp

    $default  reduce using rule 9 (exp)


State 17

    7 exp: exp . ADD exp
    8    | exp . SUB exp
    9    | exp . MUL exp
   10    | exp . DIV exp
   10    | exp DIV exp .

    $default  reduce using rule 10 (exp)
